Bug 909953 - Introduce a HTMLAllCollection class; r=smaug