content/html/document/src/nsHTMLDocument.h
@@ -31,6 +31,12 @@ class nsICachingChannel;
 class nsIWyciwygChannel;
 class nsILoadGroup;
 
+namespace mozilla {
+namespace dom {
+class HTMLAllCollection;
+} // namespace dom
+} // namespace mozilla
+
 class nsHTMLDocument : public nsDocument,
                        public nsIHTMLDocument,
                        public nsIDOMHTMLDocument
@@ -44,8 +50,7 @@ public:
   virtual nsresult Init() MOZ_OVERRIDE;
 
   NS_DECL_ISUPPORTS_INHERITED
-  NS_DECL_CYCLE_COLLECTION_SCRIPT_HOLDER_CLASS_INHERITED(nsHTMLDocument,
-                                                         nsDocument)
+  NS_DECL_CYCLE_COLLECTION_CLASS_INHERITED(nsHTMLDocument, nsDocument)
 
   // nsIDocument
   virtual void Reset(nsIChannel* aChannel, nsILoadGroup* aLoadGroup) MOZ_OVERRIDE;
@@ -67,12 +72,6 @@ public:
 
   virtual void BeginLoad() MOZ_OVERRIDE;
   virtual void EndLoad() MOZ_OVERRIDE;
-
-  virtual NS_HIDDEN_(void) Destroy() MOZ_OVERRIDE
-  {
-    mAll = nullptr;
-    nsDocument::Destroy();
-  }
 
   // nsIHTMLDocument
   virtual void SetCompatibilityMode(nsCompatibility aMode) MOZ_OVERRIDE;
@@ -295,7 +294,7 @@ protected:
   nsRefPtr<nsContentList> mForms;
   nsRefPtr<nsContentList> mFormControls;
 
-  JS::Heap<JSObject*> mAll;
+  nsRefPtr<mozilla::dom::HTMLAllCollection> mAll;
 
   /** # of forms in the document, synchronously set */
   int32_t mNumForms;
